# rose_perception

rose_bounding_box_finder/: CMakeLists.txt  package.xml
rose_bounding_box_finder/action/: getboundingbox.action
rose_bounding_box_finder/cfg/: bounding_box_finder.cfg  rose_bounding_box_finder.cfg
rose_bounding_box_finder/include/rose_bounding_box_finder/: bounding_box_convert_srv.hpp  bounding_box_convert_srv_node.hpp  bounding_box_finder.hpp  bounding_box_finder_node.hpp
rose_bounding_box_finder/launch/: bounding_box_finder.launch
rose_bounding_box_finder/msg/: BoundingBox.msg  BoundingBoxVector.msg  uv_bounding_box.msg  uv_point.msg
rose_bounding_box_finder/src/: bounding_box_convert_srv.cpp  bounding_box_convert_srv_node.cpp  bounding_box_finder.cpp  bounding_box_finder_node.cpp
rose_bounding_box_finder/srv/: convert_bb_to_uv.srv
rose_ed_config/: CMakeLists.txt  package.xml
rose_ed_config/config/: rose.yaml
rose_ed_config/launch/: ed.launch
rose_laser_filter/: CMakeLists.txt  package.xml
rose_laser_filter/include/rose_laser_filter/: laser_clear_filter.hpp
rose_laser_filter/src/: laser_clear_filter.cpp  laser_clear_filter_node.cpp
rose_point_extractor/: CMakeLists.txt  package.xml
rose_point_extractor/include/rose_point_extractor/: point_extractor.hpp  point_extractor_node.hpp
rose_point_extractor/src/: point_extractor.cpp  point_extractor_node.cpp  rect_marker.cpp
rose_point_extractor/srv/: get_point.srv
