<?xml version="1.0"?>
<package>
  <name>rose_bounding_box_finder</name>
  <version>0.0.0</version>
  <description>The rose_bounding_box_finder package</description>

  <maintainer email="hendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscomm</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>rose_conversions  </build_depend>
  <build_depend>rose_geometry</build_depend>
  <build_depend>rose_transformations</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>server_multiple_client</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscomm</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>rose_conversions  </run_depend>
  <run_depend>rose_geometry</run_depend>
  <run_depend>rose_transformations</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>server_multiple_client</run_depend>

  <export>
  </export>
</package>
