<?xml version="1.0"?>
<package>
  <name>rose_ed_config</name>
  <version>0.0.0</version>
  <description>Configurations of ED (environment description) specifically for Rose</description>
  <maintainer email="beek@robot-rose.nl">Loy van Beek</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ed</build_depend>
  <run_depend>ed</run_depend>
</package>