<?xml version="1.0"?>
<package>
    <name>rose_point_extractor</name>
    <version>0.0.0</version>
    <description>The rose_point_extractor package</description>

    <maintainer email="langen@robot-rose.nl">Mathijs de Langen</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>image_geometry</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>  
    <build_depend>rose_common</build_depend>

    <run_depend>image_geometry</run_depend>  
    <run_depend>message_generation</run_depend>  
    <run_depend>pcl_conversions</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>rose_common</run_depend>  

    <export>

    </export>
</package>